--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body class="body">
@@ -51,7 +51,8 @@
             <div class="row">
                 <div class="bannerText">
                     <h2 class="bannerTitle"><b>HEY THERE !!<b></h2>
-                    <p class="bannerDesc"><em>MY NAME IS KARTHIKEYA, I'm A WEB DEVELOPER<em>,<br>A FEVENT WHO PUTS UP THE BEST.</p>
+                    <p class="bannerDesc"><em>MY NAME IS KARTHIKEYA, I'm A WEB DEVELOPER<em>,<br>A FEVENT WHO PUTS UP
+                                THE BEST.</p>
                 </div>
             </div>
         </div>
@@ -72,7 +73,7 @@
 
                 <div class="col-md-8">
                     <p>HELLO, MY NAME IS KARTHIKEYA.D</p>
-                    <P>I'M A B.TECH  4TH YEAR STUDENT AT RAGHU ENGINEERING COLLEGE.</P>
+                    <P>I'M A B.TECH 4TH YEAR STUDENT AT RAGHU ENGINEERING COLLEGE.</P>
                     <P>I'M FROM RAJAHMUNDRY, ANDHRA PRADESH.</P>
                     <div class="col-md-6">
                         <ul>
@@ -85,8 +86,8 @@
                     <div class="col-md-6">
                         <ul>
                             <li>TECHNOLOGIES WORKING ON: WEB DEVELOPMENT</li>
-                            <li>PORTFOLIO: <a href="https://adarsh0549.github.io/portfolio/" target="_blank" rel="noopener noreferrer"
-                                    class="">CLICK HERE FOR MY PORTFOLIO</a></li>
+                            <li>PORTFOLIO: <a href="https://adarsh0549.github.io/portfolio/" target="_blank"
+                                    rel="noopener noreferrer" class="">CLICK HERE FOR MY PORTFOLIO</a></li>
                         </ul>
                     </div>
                 </div>
@@ -200,8 +201,7 @@
             <div class="mt-4 text-center px-1">
                 <a href="https://wa.me/qr/5LGLGOMVDFQYO1" target="_blank" rel="noopenernoreferrer"><i
                         class="bi bi-whatsapp bIcon"></i></a>
-                <a href="" target="_blank"
-                    rel="noopenernoreferrer"><i class="bi bi-instagram bIcon"></i></a>
+                <a href="" target="_blank" rel="noopenernoreferrer"><i class="bi bi-instagram bIcon"></i></a>
                 <a href="discordapp.com/users/966230792529391676" target="_blank" rel="noopenernoreferrer"><i
                         class="bi bi-discord bIcon"></i></a>
                 <a href="https://www.linkedin.com/in/karthikeya-d/" target="_blank" rel="noopenernoreferrer"><i
