--- a/index.html
+++ b/index.html
@@ -198,14 +198,14 @@
     <!-- footer Start -->
     <footer id="footer">
         <div class="container-fluid bg-dark py-2">
-            <div class="mt-4 text-center px-1">
+            <div class="mt-4 text-center px-1 mb-3">
                 <a href="https://wa.me/qr/5LGLGOMVDFQYO1" target="_blank" rel="noopenernoreferrer"><i
-                        class="bi bi-whatsapp bIcon"></i></a>
-                <a href="" target="_blank" rel="noopenernoreferrer"><i class="bi bi-instagram bIcon"></i></a>
+                        class="bi bi-whatsapp bIcon p-3"></i></a>
+                <a href="" target="_blank" rel="noopenernoreferrer"><i class="bi bi-instagram bIcon p-3"></i></a>
                 <a href="discordapp.com/users/966230792529391676" target="_blank" rel="noopenernoreferrer"><i
-                        class="bi bi-discord bIcon"></i></a>
+                        class="bi bi-discord bIcon p-3"></i></a>
                 <a href="https://www.linkedin.com/in/karthikeya-d/" target="_blank" rel="noopenernoreferrer"><i
-                        class="bi bi-linkedin bIcon"></i></a>
+                        class="bi bi-linkedin bIcon p-3"></i></a>
             </div>
         </div>
 
