--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
 
     <!-- Contact Start -->
     <section id="contact">
-        <div class="container-fluid">
+        <div class="container">
             <h1 class="text-center">Connect with me !!</h1>
             <div class="row">
                 <div class="col-md-6">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d236241.29544207206!2d83.09777853923576!3d17.7386034121346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a39431389e6973f%3A0x92d9c20395498468!2sVisakhapatnam%2C%20Andhra%20Pradesh!5e1!3m2!1sen!2sin!4v1688049236660!5m2!1sen!2sin"
-                        width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-md-6">
