--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
     <!-- About Start -->
 
-    <section>
+    <section class="mt-3 mb-3">
         <div class="container" id="about">
-            <h1 class="text-center">About Me</h1>
+            <h1 class="text-center mb-3">About Me</h1>
             <div class="row">
 
                 <div class="col-md-4">
@@ -97,9 +97,9 @@
     <!-- About End -->
 
     <!-- service Start -->
-    <section>
+    <section class="mb-3 mt-3">
         <div class="container" id="service">
-            <h1 class="text-center">Services</h1>
+            <h1 class="text-center mb-3">Services</h1>
             <div class="row">
                 <div class="card w-45 mb-3 h-100" data-aos="flip-right" data-aos-duration="1000" style="width: 18rem">
                     <!-- <div class="card-body d-flex flex-column">
@@ -120,9 +120,9 @@
     <!-- service End -->
 
     <!-- project Start -->
-    <section id="project">
+    <section id="project" class="mb-3 mt-3">
         <div class="container">
-            <h1 class="text-center">Projects</h1>
+            <h1 class="text-center mb-3">Projects</h1>
             <div class="row">
                 <div class="col-md-6">
                     <div class="card mb-3">
@@ -154,9 +154,9 @@
     <!-- project End -->
 
     <!-- Contact Start -->
-    <section id="contact">
+    <section id="contact" class="mb-3 mt-3">
         <div class="container">
-            <h1 class="text-center">Connect with me !!</h1>
+            <h1 class="text-center mb-3">Connect with me !!</h1>
             <div class="row">
                 <div class="col-md-6">
                     <iframe
