Added Web Developed Image

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <!-- <div class="card-body d-flex flex-column">
                         <img src="/images/web-developer.jpg" class="card-img-top" alt="Web Developer icon" />
                     </div> -->
-                    <img src="./images/web-developer.jpg" class="card-img-top" alt="Web Developer icon" />
+                    <img src="./IMG/web-developer.jpg" class="card-img-top" alt="Web Developer icon" />
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-center mb-4">Web Developer</h5>
                         <p class="card-text mt-auto">
