Modified banner image repeat

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="row">
                 <div class="bannerText">
                     <h2 class="bannerTitle"><b>HEY THERE !!<b></h2>
-                    <p class="bannerDesc"><em>MY NAME IS KARTHIKEYA, I'm A WEB DEVELOPER<em>,<br>A FEVENT WHO PUTS UP
+                    <p class="bannerDesc"><em>MY NAME IS KARTHIKEYA, I'm A WEB DEVELOPER<em>,<br>A FERVENT WHO PUTS UP
                                 THE BEST.</p>
                 </div>
             </div>
@@ -66,7 +66,7 @@
             <h1 class="text-center mb-3">About Me</h1>
             <div class="row">
 
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3 mb-lg-0">
                     <img src="./IMG/Me.jpg" alt="passportPicture" class="card-img img-fluid">
                 </div>
 
@@ -125,24 +125,28 @@
             <h1 class="text-center mb-3">Projects</h1>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="card mb-3">
+                    <div class="card mb-3 w-100 h-100">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
-                        <div class="card-body">
-                            <h5 class="card-title">Basic HTML and CSS Page</h5>
-                            <p class="card-text">A simple HTML and CSS page created using tags.</p>
-                            <a href="" target="_blank">GIT REPO LINK</a><br>
-                            <a href="" target="_blank">HOSTING URL</a>
+                        <div class="card-body d-flex flex-column justify-content-around">
+                            <h5 class="card-title text-center">Basic HTML and CSS Page</h5>
+                            <p class="card-text text-center">A simple HTML and CSS page created using tags.</p>
+                            <div class="d-flex flex-row justify-content-around">
+                                <a href="" target="_blank">GIT REPO LINK</a><br>
+                                <a href="" target="_blank">HOSTING URL</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card mb-3">
+                    <div class="card mb-3 w-100 h-100">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
-                        <div class="card-body">
-                            <h5 class="card-title">Portfolio</h5>
-                            <p class="card-text">A portfolio website.</p>
-                            <a href="" target="_blank">GIT REPO LINK</a><br>
-                            <a href="" target="_blank">HOSTING URL</a>
+                        <div class="card-body d-flex flex-column justify-content-around">
+                            <h5 class="card-title text-center">Portfolio</h5>
+                            <p class="card-text text-center">A portfolio website.</p>
+                            <div class="d-flex flex-row justify-content-around">
+                                <a href="" target="_blank">GIT REPO LINK</a><br>
+                                <a href="" target="_blank">HOSTING URL</a>
+                            </div>
                         </div>
                     </div>
 
@@ -185,7 +189,7 @@
                             <textarea class="form-control" id="textarea" rows="3"
                                 placeholder="Type Your Query Here"></textarea>
                         </div>
-                        <div class="col-auto">
+                        <div class="col-auto d-flex flex-row justify-content-center justify-content-lg-start">
                             <button type="submit" class="btn btn-primary mb-3">Submit</button>
                         </div>
                     </form>
