Added alignment between li tags

--- a/index.html
+++ b/index.html
@@ -73,22 +73,24 @@
 
                 <div class="col-md-8">
                     <p>HELLO, MY NAME IS KARTHIKEYA.D</p>
-                    <P>I'M A B.TECH 4TH YEAR STUDENT AT RAGHU ENGINEERING COLLEGE.</P>
-                    <P>I'M FROM RAJAHMUNDRY, ANDHRA PRADESH.</P>
-                    <div class="col-md-6">
-                        <ul>
-                            <li>FULL NAME : KARTHIKEYA.D</li>
-                            <li>AGE : 20</li>
-                            <li>OCCUPTION : STUDENT</li>
-                            <li>SKILLS : HTML, CSS, PYTHON, C</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <ul>
-                            <li>TECHNOLOGIES WORKING ON: WEB DEVELOPMENT</li>
-                            <li>PORTFOLIO: <a href="https://karthikeya004.github.io/Justin/" target="_blank"
-                                    rel="noopener noreferrer" class="">CLICK HERE FOR MY PORTFOLIO</a></li>
-                        </ul>
+                    <P>I'M A B.TECH 4TH YEAR STUDENT AT RAGHU ENGINEERING COLLEGE.</p>
+                    <P>I'M FROM RAJAHMUNDRY, ANDHRA PRADESH.</p>
+                    <div class="col-12 d-flex flex-column flex-lg-row">
+                        <div class="col-lg-6">
+                            <ul>
+                                <li>FULL NAME : KARTHIKEYA.D</li>
+                                <li>AGE : 20</li>
+                                <li>OCCUPTION : STUDENT</li>
+                                <li>SKILLS : HTML, CSS, PYTHON, C</li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6 mb-3">
+                            <ul>
+                                <li>TECHNOLOGIES WORKING ON: WEB DEVELOPMENT</li>
+                                <li>PORTFOLIO: <a href="https://karthikeya004.github.io/Justin/" target="_blank"
+                                        rel="noopener noreferrer" class="">CLICK HERE FOR MY PORTFOLIO</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
