--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
     <section class="mb-3 mt-3">
         <div class="container" id="service">
             <h1 class="text-center mb-3">Services</h1>
-            <div class="row">
-                <div class="card w-45 mb-3 h-100" data-aos="flip-right" data-aos-duration="1000" style="width: 18rem">
+            <div class="row d-flex flex-row justify-content-around">
+                <div class="card mb-3" data-aos="flip-right" data-aos-duration="1000" style="width: 18rem">
                     <!-- <div class="card-body d-flex flex-column">
                         <img src="/images/web-developer.jpg" class="card-img-top" alt="Web Developer icon" />
                     </div> -->
-                    <img src="./IMG/web-developer.jpg" class="card-img-top" alt="Web Developer icon" />
-                    <div class="card-body d-flex flex-column">
-                        <h5 class="card-title text-center mb-4">Web Developer</h5>
-                        <p class="card-text mt-auto">
+                    <img src="./IMG/web-developer.jpg" class="card-img-top mt-3" alt="Web Developer icon" />
+                    <div class="card-body d-flex flex-column justify-content-around">
+                        <h5 class="card-title text-center mb-3">Web Developer</h5>
+                        <p class="card-text mt-auto text-center">
                             I am a Front end developer , built various
                             responsive websites
                         </p>
@@ -126,7 +126,7 @@
         <div class="container">
             <h1 class="text-center mb-3">Projects</h1>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 mb-3">
                     <div class="card mb-3 w-100 h-100">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
                         <div class="card-body d-flex flex-column justify-content-around">
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 mb-3">
                     <div class="card mb-3 w-100 h-100">
                         <!-- <img src="..." class="card-img-top" alt="..."> -->
                         <div class="card-body d-flex flex-column justify-content-around">
@@ -164,13 +164,13 @@
         <div class="container">
             <h1 class="text-center mb-3">Connect with me !!</h1>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-6 mb-3">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d236241.29544207206!2d83.09777853923576!3d17.7386034121346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a39431389e6973f%3A0x92d9c20395498468!2sVisakhapatnam%2C%20Andhra%20Pradesh!5e1!3m2!1sen!2sin!4v1688049236660!5m2!1sen!2sin"
                         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-6">
                     <form>
                         <div class="mb-3">
                             <label for="fullName" class="form-label">Full Name</label>
@@ -191,7 +191,7 @@
                             <textarea class="form-control" id="textarea" rows="3"
                                 placeholder="Type Your Query Here"></textarea>
                         </div>
-                        <div class="col-auto d-flex flex-row justify-content-center justify-content-lg-start">
+                        <div class="col-auto d-flex flex-row justify-content-center">
                             <button type="submit" class="btn btn-primary mb-3">Submit</button>
                         </div>
                     </form>
