Moved about me to center

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
 
 
-                <div class="col-md-8">
+                <div class="col-md-8 d-flex flex-column justify-content-center">
                     <p>HELLO, MY NAME IS KARTHIKEYA.D</p>
                     <P>I'M A B.TECH 4TH YEAR STUDENT AT RAGHU ENGINEERING COLLEGE.</p>
                     <P>I'M FROM RAJAHMUNDRY, ANDHRA PRADESH.</p>
